src/qml/jsruntime/qv4debugging.cpp
@@ -509,7 +509,6 @@ void Debugger::maybeBreakAtInstruction()
         return;
 
     QMutexLocker locker(&m_lock);
-    int lineNumber = engine()->currentContext()->d()->lineNumber;
 
     if (m_gatherSources) {
         m_gatherSources->run();
@@ -533,8 +532,12 @@ void Debugger::maybeBreakAtInstruction()
     if (m_pauseRequested) { // Serve debugging requests from the agent
         m_pauseRequested = false;
         pauseAndWait(PauseRequest);
-    } else if (m_haveBreakPoints && reallyHitTheBreakPoint(getFunction()->sourceFile(), lineNumber)) {
-        pauseAndWait(BreakPoint);
+    } else if (m_haveBreakPoints) {
+        if (Function *f = getFunction()) {
+            const int lineNumber = engine()->currentContext()->d()->lineNumber;
+            if (reallyHitTheBreakPoint(f->sourceFile(), lineNumber))
+                pauseAndWait(BreakPoint);
+        }
     }
 }
 
@@ -579,12 +582,10 @@ void Debugger::aboutToThrow()
 Function *Debugger::getFunction() const
 {
     ExecutionContext *context = m_engine->currentContext();
-    if (CallContext *callCtx = context->asCallContext())
-        return callCtx->d()->function->function();
-    else {
-        Q_ASSERT(context->d()->type == QV4::ExecutionContext::Type_GlobalContext);
+    if (const FunctionObject *function = context->getFunctionObject())
+        return function->function();
+    else
         return context->d()->engine->globalCode;
-    }
 }
 
 void Debugger::pauseAndWait(PauseReason reason)
