tests/auto/qml/qv4debugger/tst_qv4debugger.cpp
@@ -286,6 +286,7 @@ private slots:
 
     // exceptions:
     void pauseOnThrow();
+    void breakInCatch();
 
     void evaluateExpression();
 
@@ -610,6 +611,25 @@ void tst_qv4debugger::pauseOnThrow()
     QCOMPARE(m_debuggerAgent->m_stackTrace.size(), 2);
     QCOMPARE(m_debuggerAgent->m_thrownValue.type(), QVariant::String);
     QCOMPARE(m_debuggerAgent->m_thrownValue.toString(), QString("hard"));
+}
+
+void tst_qv4debugger::breakInCatch()
+{
+    QString script =
+            "try {\n"
+            "    throw 'catch...'\n"
+            "} catch (e) {\n"
+            "    console.log(e, 'me');\n"
+            "}\n";
+
+    m_debuggerAgent->addBreakPoint("breakInCatch", 4);
+    evaluateJavaScript(script, "breakInCatch");
+    QVERIFY(m_debuggerAgent->m_wasPaused);
+    QCOMPARE(m_debuggerAgent->m_pauseReason, BreakPoint);
+    QCOMPARE(m_debuggerAgent->m_statesWhenPaused.count(), 1);
+    QV4::Debugging::Debugger::ExecutionState state = m_debuggerAgent->m_statesWhenPaused.first();
+    QCOMPARE(state.fileName, QString("breakInCatch"));
+    QCOMPARE(state.lineNumber, 4);
 }
 
 void tst_qv4debugger::evaluateExpression()
